# algorithms_base

./: .gitignore  .gitignore.swp  .travis.yml  CMakeLists.txt  binary_search.cpp  binary_search_by_answer.cpp  random-tutorial.md  tasks.json  test_runner.h  vim_hotkeys.md
4.7.1/: CMakeLists.txt  color.h  goods.cpp
4.7.2/: CMakeLists.txt  min_max_length.cpp
4.7.3/: CMakeLists.txt  meerkats.cpp
4.7.4/: CMakeLists.txt  max_hollydays.cpp
4.7.5/: CMakeLists.txt  min_time_for_copy.cpp
4.7.6/: CMakeLists.txt  Task_4.7.6.md  days_count.cpp
4.7.7/: 4.7.7.aux  4.7.7.fdb_latexmk  4.7.7.fls  4.7.7.pyg  4.7.7.tex  CMakeLists.txt  Task 4.7.7.md  diamonds  diamonds.py
4.7.7/src/: .diamonds.cpp.swp  diamonds.cpp  diamonds.h
4.7.7/test/: tests.cpp
4.7.7/test/Tests/: IN 1.txt  IN 10.txt  IN 11.txt  IN 12.txt  IN 13.txt  IN 14.txt  IN 15.txt  IN 16.txt  IN 17.txt  IN 18.txt  IN 19.txt  IN 2.txt  IN 20.txt  IN 21.txt  IN 22.txt  IN 23.txt  IN 25.txt  IN 26.txt  IN 27.txt  IN 28.txt  IN 29.txt  IN 3.txt  IN 30.txt  IN 5.txt  IN 6.txt  IN 7.txt  IN 8.txt  IN 9.txt  OUT 1.txt  OUT 10.txt  OUT 20.txt  OUT 21.txt  OUT 23.txt  OUT 24.txt  OUT 28.txt  OUT 29.txt  OUT 30.txt  OUT 5.txt  OUT 6.txt  OUT 7.txt  (+2 more)
5/: two_pointers.py
5.2/: CMakeLists.txt  two_pointers.cpp  two_pointers.py
5.3/: CMakeLists.txt  sum2arrays.cpp  sum2arrays.py
5.4/: CMakeLists.txt  long_pressed_name.cpp
5.6.1/: CMakeLists.txt  date.cpp
5.6.2/: CMakeLists.txt  diameters.cpp
5.6.3/: CMakeLists.txt  substring_count.cpp
5.6.4/: CMakeLists.txt  countSubstringsFromString.aux  countSubstringsFromString.fdb_latexmk  countSubstringsFromString.fls  countSubstringsFromString.tex  substring_count_from_t.cpp
5.6.5/: 5.6.5.md  CMakeLists.txt  titans.cpp
cmake/: FindGTest.cmake
contrib/: gmock-gtest-all.cc  gmock_main.cc
contrib/benchmark/src/: benchmark.cc  benchmark_api_internal.h  benchmark_register.cc  complexity.cc  complexity.h  console_reporter.cc  counter.h  csv_reporter.cc  cycleclock.h  internal_macros.h  json_reporter.cc  log.h  reporter.cc  statistics.cc  statistics.h
contrib/gmock/: gmock.h
contrib/gtest/: gtest.hpp
